# legger-ai

./: .env.example  .gitattributes  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4ebfcff544f5_initial_schema.py  bf1ea22295b3_message_feedback.py
backend/eval/: queries.yaml
backend/eval/results/: norme_voyage4-20260610-221356.json  norme_voyage4large-20260610-203049.json  norme_voyage4large-20260610-232510.json  norme_voyage4large-20260610-233234.json  norme_voyage4large-rerank-20260611-003858.json  norme_voyagelaw2-20260610-202948.json
backend/legger/: alerts.py  cli.py  db.py  eval_retrieval.py  feedback_report.py  settings.py
backend/legger/api/: acts.py  app.py  chat.py  feedback.py  ratelimit.py  search.py
backend/legger/chat/: generate.py  guardrail.py  models_catalog.py  prompts.py  stream.py  types.py  understanding.py
backend/legger/corpus/: _common.py  akn.py  chunker.py  models.py  parser.py  refs.py
backend/legger/ingestion/: bootstrap.py  delta.py
backend/legger/retrieval/: citations.py  embedders.py  fastpath.py  index.py  pipeline.py  rerank.py  search.py
backend/scripts/: analyze_corpus.py
backend/tests/: test_alerts.py  test_api_acts.py  test_api_app.py  test_api_chat.py  test_api_feedback.py  test_api_search.py  test_bootstrap_resume.py  test_chunker.py  test_citation_following.py  test_cli.py  test_db.py  test_delta.py  test_embedders.py  test_eval.py  test_eval_queries.py  test_fastpath.py  test_feedback_report.py  test_generate.py  test_guardrail.py  test_index.py  test_models_catalog.py  test_parser.py  test_pipeline.py  test_ratelimit.py  test_refs.py  test_rerank.py  test_search.py  test_settings.py  test_stream_markers.py  test_understanding.py
backend/tests/fixtures/: README.md
backend/tests/fixtures/corpus/Codici/: 1942-04-04_042U0262_VIGENZA_2026-04-29_V0.md  Approvazione del testo definitivo del Codice Penale. 030U1398.md
backend/tests/fixtures/corpus/Leggi finanziarie e di bilancio/: Bilancio di previsione dello Stato per lanno finanziario 2025 e bilancio pluriennale per il triennio 2025-2027. 24G00229.md
backend/tests/fixtures/corpus/Regi decreti/: 012U0343.md
docs/: c5-chat-transcript.md  corpus-analysis.md  deploy.md
docs/plans/: 2026-06-10-legger-ai-design.md  2026-06-10-legger-ai-implementation.md  2026-06-16-rate-limiting-design.md  2026-06-16-rate-limiting.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/lib/: api.ts  (+7 more)
(+28 files in other folders)
