[project]
name = "legger"
version = "0.1.0"
description = "RAG assistant over Italian legislation"
# <3.13 because the numpy<2 pin below has no CPython 3.13 wheels.
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "fastembed>=0.7.4",
    # Intel-mac torch 2.2.2 pins (numpy, transformers, flagembedding) — see
    # legger/retrieval/embedders.py docstring; removable on linux/arm.
    "flagembedding>=1.3.5,<1.4",
    "httpx>=0.28.1",
    "numpy<2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "redis>=5.0",
    "sqlalchemy>=2.0.50",
    "transformers>=4.44,<4.50",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.0",
]

[project.scripts]
legger = "legger.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "fakeredis>=2.21",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-m", "not slow and not db"]
markers = [
    "corpus: needs the real italia-corpus checkout (skipped when missing)",
    "slow: downloads/loads real models or hits the network (run with -m slow)",
    "db: hits the local Postgres from docker compose (run with -m db)",
]
